--- a/src/main/webapp/seller/contract/dg/oldEdit.xhtml
+++ b/src/main/webapp/seller/contract/dg/oldEdit.xhtml
@@ -35,6 +35,10 @@
 
 <h:body style="padding-top: 50px;" pt:data-spy="scroll" pt:data-target=".bs-docs-sidebar" pt:data-offset="60">
 
+    <b:growl id="growl"
+             globalOnly="true"
+             showDetail="true"/>
+
     <b:modal id="amodal" size="modal-sm" title="删除确认" styleClass="modalPseudoClass">
         <p>删除合同确认,合同内所有信息将会丢失！</p>
         <f:facet name="footer">
