valid sale house 1

--- a/src/main/webapp/seller/apply/houseSalePicUpload.xhtml
+++ b/src/main/webapp/seller/apply/houseSalePicUpload.xhtml
@@ -51,12 +51,6 @@
                 产权验证
             </li>
 
-
-            <li class="complete">
-                <b:iconAwesome name="check" size="2x"/>
-                <strong class="step">委托:</strong>
-                委托信息
-            </li>
             <li class="complete">
                 <b:iconAwesome name="check" size="2x"/>
                 <strong class="step">描述:</strong>
@@ -69,8 +63,8 @@
             </li>
             <li>
                 <b:iconAwesome name="university" size="2x"/>
-                <strong class="step">提交:</strong>
-                提交房源
+                <strong class="step">合同:</strong>
+                委拖合同
             </li>
 
         </ol>
