--- a/src/main/webapp/seller/home.xhtml
+++ b/src/main/webapp/seller/home.xhtml
@@ -39,7 +39,7 @@
                                iconAwesome="sitemap" />
 
 
-                    <b:navLink href="#{request.contextPath}/erp/operational/shopMgr.xhtml"  value="系统设置"
+                    <b:navLink styleClass="todo-disable" disabled="true" href="#{request.contextPath}/erp/operational/shopMgr.xhtml"  value="系统设置"
                                iconAwesome="beer" />
 
                 </b:listLinks>
